istio/resilience/virtual-service-go-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
  - service-go
  http:
  - route:
    - destination:
        host: service-go
    retries:
      attempts: 3
      perTryTimeout: 2s
